記事ごとにフォルダ別に整理

--- a/IRT/irt_2pl.qmd
+++ b/IRT/irt_2pl.qmd
@@ -64,9 +64,11 @@ icc <- function(params, tr = c(-4, 4), np = 100) {
   t_vals <- seq(tr[1], tr[2], length.out = np)
 
   # プロットの初期化
-  plot(NULL, xlim = tr, ylim = c(0, 1), type = "n",
-       xlab = "θ", ylab = "正答確率",
-       main = "ICC")
+  plot(NULL,
+    xlim = tr, ylim = c(0, 1), type = "n",
+    xlab = "θ", ylab = "正答確率",
+    main = "ICC"
+  )
   grid()
 
   # 各項目の特性曲線を描画
@@ -74,13 +76,15 @@ icc <- function(params, tr = c(-4, 4), np = 100) {
     a <- params$a[i]
     b <- params$b[i]
     p_vals <- p2pl(t_vals, a, b)
-    lines(t_vals, p_vals, lwd = 2, col = i)  # 番号を色に対応
-    abline(v = b, col = i, lty = 2)          # 困難度のライン
+    lines(t_vals, p_vals, lwd = 2, col = i) # 番号を色に対応
+    abline(v = b, col = i, lty = 2) # 困難度のライン
   }
 
   # 凡例を追加
-  legend("bottomright", legend = paste("a =", params$a, ", b =", params$b),
-         col = seq_along(params$a), lwd = 2, bg = "white")
+  legend("bottomright",
+    legend = paste("a =", params$a, ", b =", params$b),
+    col = seq_along(params$a), lwd = 2, bg = "white"
+  )
 }
 
 params1 <- list(
