--- a/ICT/ict_index.qmd
+++ b/ICT/ict_index.qmd
@@ -3,6 +3,9 @@
 Windows, Linux等に関するメモ
 
 
+## 記事
+- [R on Google Colabで日本語を使う](ict_colab_jp.qmd)
+
 ## memo
 
 - [MicrosoftアカウントでログインせずにWindows 11をローカルアカウントで使う方法](https://ascii.jp/elem/000/004/129/4129038/): すぐ忘れるのでメモ。
