fix: 図のスタイルを修正

--- a/IRT/irt_measurement_error.qmd
+++ b/IRT/irt_measurement_error.qmd
@@ -36,7 +36,8 @@ score <- apply(resp, 1, sum)
 hist(score, main = "", xlab = "正答数", ylab = "頻度")
 ```
 
-ほぼ満点に近い（15題中14問の正答）場合も，半分もできない（15題中6問の正答）場合もありえるということです。
+ほぼ満点に近い（15題中14問の正答）場合も，
+半分もできない（15題中6問の正答）場合もありえるということです。
 
 ```{r}
 c(
