fix: 「無作為抽出」を「単純な無作為抽出」に修正

--- a/SURVEY/survey_survey.qmd
+++ b/SURVEY/survey_survey.qmd
@@ -129,22 +129,22 @@ surveyでは，最初に`svydesign`関数で調査デザインを指定した後
 ここでは，いくつかの調査デザインを設定し，
 それぞれでSEがどのように変化するか検討してみます。
 
-#### 無作為抽出
+#### 単純な無作為抽出
 
-無作為抽出の場合，`ids = ~1`（あるいは，`ids = ~0`）を指定します。
+単純な無作為抽出の場合，`ids = ~1`（あるいは，`ids = ~0`）を指定します。
 
 ```{r}
-# 無作為抽出
+# 単純な無作為抽出
 des0 <- survey::svydesign(ids = ~1, data = samp, weights = ~wt)
 survey::svymean(~scr, des0)
 ```
 
-一応推定は可能ですが，今回の調査デザインは無作為抽出ではありません。
+一応推定は可能ですが，今回の調査デザインは単純な無作為抽出ではありません。
 一般に，同じ学校の生徒は似通っていると考えられます。
-無作為抽出では，個々の生徒はそれぞれ独立（≒まったく違う特徴を持つ）
+単純な無作為抽出では，個々の生徒はそれぞれ独立（≒まったく違う特徴を持つ）
 ことが前提とされていますが，学校を単位とした抽出では
 その前提が破られています。
-そのため無作為抽出を前提とした推定では，SEが過小評価されていると考えられます。
+そのため単純な無作為抽出を前提とした推定では，SEが過小評価されていると考えられます。
 
 #### クラスターサンプリング
 
